regular update; added terraria files

--- a/vim/skel/tmpl.tex
+++ b/vim/skel/tmpl.tex
@@ -1,5 +1,8 @@
 \documentclass[12pt, letterpaper]{article}
+
+% this is for times new roman
 \usepackage{mathptmx}
+
 \usepackage[T1]{fontenc}
 \usepackage{datetime}
 \usepackage[french]{babel}
